# packet-generator

./: .gitignore  .typos.toml  Cargo.toml  HOWTO.MD  README.MD  mise.toml  packet-generator.py  pkgen.py  prek.toml  schema.py  schemawriter.py
.cargo/: mutants.toml
.github/workflows/: check.yml  scheduled.yml  test.yml
assets/: all.kdl
assets/mst/: arena.kdl  banner.kdl  daily_task.kdl  dailytaskbonus.kdl  define.kdl  dungeon_key.kdl  dungeonkey.kdl  event.kdl  events.kdl  excluded_dungeon.kdl  excludeddungeon.kdl  first_desc.kdl  firstdesc.kdl  frontier_hunter.kdl  gacha.kdl  gift.kdl  help.kdl  info.kdl  login_campaign.kdl  logincampaign.kdl  notice_info.kdl  noticeinfo.kdl  npc.kdl  passive_skill.kdl  passiveskill.kdl  receipe.kdl  slots.kdl  sound.kdl  town.kdl  trophy.kdl  unit.kdl  url.kdl  user_level.kdl  userlevel.kdl  version_info.kdl  versioninfo.kdl
assets/net/: badge_info.kdl  badgeinfo.kdl  challenge_arena.kdl  daily_login.kdl  event.kdl  feature_check.kdl  featurecheck.kdl  featuring_gate.kdl  friends.kdl  gme.kdl  guild.kdl  gumi_live.kdl  handlers.kdl  items.kdl  logincampaign.kdl  mission.kdl  npc.kdl  npc_message_overwrite.kdl  permit_place.kdl  permitplace.kdl  raid.kdl  reinforcementinfo.kdl  signal_key.kdl  summoner_journal.kdl  summonerjournaluserinfo.kdl  summonticketuserinfo.kdl  unit.kdl  user.kdl  userinfo.kdl
assets/runtime/cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  date.h  pkgen_glaze_helpers.hpp  pkgen_helpers.hpp  sync.txt
assets/runtime/cpp/unit_tests/: CMakeLists.txt  test_glaze_array.cpp  test_glaze_unsorted.cpp  test_glaze_variant.cpp
benches/: parser.rs
data-old/mst/: define.py  events.py  excludeddungeon.py  firstdesc.py  logincampaign.py  passiveskill.py  receipe.py  slots.py  town.py  unit.py  url.py  userlevel.py
data-old/net/: badgeinfo.py  challenge_arena.py  featurecheck.py  handlers.py  logincampaign.py  npcmessageoverwriteinfo.py  signalkey.py  summonerjournaluserinfo.py
data/mst/: arena.py  banner.py  dailytaskbonus.py  define.py  dungeonkey.py  excludeddungeon.py  firstdesc.py  gatcha.py  gift.py  logincampaign.py  noticeinfo.py  npc.py  passiveskill.py  receipe.py  slots.py  town.py  unit.py  url.py  userlevel.py  versioninfo.py
data/net/: badgeinfo.py  challenge_arena.py  daily_login.py  featurecheck.py  featuring_gate.py  gme.py  guild.py  gumi_live.py  handlers.py  initialize.py  items.py  logincampaign.py  npcmessageoverwriteinfo.py  raid.py  reinforcementinfo.py  signalkey.py  summonticketuserinfo.py  userinfo.py
doc/adr/: 0003-dependencies-target.md
gen_old/: generator.py  glazecpp.py
kdl-generator/: .gitignore  Cargo.toml  mise.toml  prek.toml
kdl-generator/assets/: array-sample.kdl  example-2.kdl  example-3.kdl  example.kdl  gme.kdl  string-enum.kdl
kdl-generator/assets/mst/: arena.kdl  gatcha.kdl  npc.kdl  receipe.kdl  unit.kdl
kdl-generator/assets/net/: daily_login.kdl  featurecheck.kdl  featuring_gate.kdl  friends.kdl  friends.toconv.kdl  gme.kdl  gme.toconv.kdl  guild.toconv.kdl  handlers.toconv.kdl  items.kdl  items.toconv.kdl  missionbreakinfo.kdl  missionbreakinfo.toconv.kdl  npcmessageoverwriteinfo.kdl  permitplace.toconv.kdl  raid.toconv.kdl  summonerjournaluserinfo.kdl  userinfo.kdl
kdl-generator/assets/runtime/cpp/: .gitignore  pkgen_helpers.hpp
kdl-generator/benches/: parser.rs
kdl-generator/doc/adr/: 0001-record-architecture-decisions.md  0002-enum-type-implementation-in-kdl.md
kdl-generator/packet-generator-cli/: Cargo.toml
kdl-generator/packet-generator-cli/src/: cli.rs  main.rs
kdl-generator/src/: lib.rs  vfs.rs
kdl-generator/src/generators/: cpp.rs  glaze.rs  mod.rs
kdl-generator/src/kdl_parser/: mod.rs  schema.rs  schema_validator.rs  type_parser.rs
kdl-generator/src/kdl_parser/parser/: data_parser.rs  enum_parser.rs  json_parser.rs  mod.rs  type_parser.rs
kdl-generator/src/kdl_parser/schema/: mod.rs  validator.rs
kdl-generator/tests/: e2e.rs  test_gacha.cpp
kdl-generator/tests/defs/: main.kdl
kdl-generator/tools/lsp/: Cargo.toml
kdl-generator/tools/lsp/src/: main.rs
mst/: dailytaskbonus.py  events.py  gatcha.py  gift.py  noticeinfo.py  slots.py  town.py  userlevel.py  versioninfo.py
net/: __init__.py  badgeinfo.py  daily_login.py  friends.py  gme.py  gumi_live.py  missionbreakinfo.py  permitplace.py  signalkey.py  summonerjournaluserinfo.py  userinfo.py
packet-generator-cli/: Cargo.toml
packet-generator-cli/src/: cli.rs  main.rs
proptest-regressions/generators/: utils.txt
proptest-regressions/kdl_parser/parser/: type_parser.txt
runtime/cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  date.h  glaze_helpers.hpp  pkgen_glaze_helpers.hpp  pkgen_helpers.hpp
runtime/cpp/unit_tests/: CMakeLists.txt  perf_test.hpp  perf_test.json  test.cpp  test_gacha.cpp  test_glaze_single_array.cpp  test_glaze_unsorted.cpp  test_gme.cpp  test_list.cpp  test_logincampaign.cpp  test_pkg.cpp
src/: lib.rs  vfs.rs
src/generators/: cpp.rs  glaze.rs  mod.rs  utils.rs
src/generators/cpp/: glaze.rs  mod.rs
src/kdl_parser/: errors.rs  mod.rs  to_intermediate.rs
src/kdl_parser/parser/: enum_parser.rs  json_parser.rs  mod.rs  type_parser.rs
src/kdl_parser/schema/: mod.rs  validator.rs
test/: __init__.py  factory.py  glazecpp.py  tester.py
test/glazecpp/: .gitignore  CMakeLists.txt  test.cpp  test_gacha.cpp  test_gme.cpp  test_list.cpp  test_logincampaign.cpp
tests/: e2e.rs  test_gme.cpp  test_list.cpp  test_logincampaign.cpp
tests/defs/: http.kdl  included-2.kdl  main.kdl  plist.kdl  xml.kdl
tests/defs/nested/: included-3.kdl
tools/lsp/: Cargo.toml
tools/lsp/src/: main.rs
