[package]
name = "packet-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
rootcause = "0.11.1"
thiserror = "2.0.17"
miette = { version = "7", features = ["fancy"] } # pretty diagnostics
winnow = { version = "0.7.14", features = ["simd"] }
bpaf = { version = "0.9.20", features = ["derive"] }
kdl = "6.5.0"
