[package]
name = "packet-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
rootcause = "0.11.1"
thiserror = "2.0.17"
miette = { version = "7", features = ["fancy"] } # pretty diagnostics
winnow = { version = "0.7.14", features = ["simd"] }
bpaf = { version = "0.9.20", features = ["derive"] }
kdl = "6.5.0"
itertools = "0.14.0"
stringcase = "0.4.0"
path-clean = "^0.1.0"

[profile.release]
lto = true
strip = true

# [lints.rust]
# missing-docs = "warn"

# [lints.rustdoc]
# missing-crate-level-docs = "warn"

[lints.clippy]
unwrap-used = "forbid"
unwrap-in-result = "forbid"
unwrap-or-default = "forbid"
missing-errors-doc = "deny"
explicit-iter-loop = "deny"
items-after-statements = "deny"
ref-option-ref = "deny"
cast-lossless = "deny"
semicolon-if-nothing-returned = "deny"
ignored-unit-patterns = "deny"
if-not-else = "deny"
redundant-closure-for-method-calls = "deny"
single-char-pattern = "deny"
use-self = "deny"
redundant-pub-crate = "deny"
option-if-let-else = "allow"
unnecessary-wraps = "warn"
future-not-send = "warn"
# cognitive-complexity = "warn"
uninlined-format-args = "allow"
wildcard-imports = "allow"
too-many-lines = "allow"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
